syntax = "proto3";

option csharp_namespace = "TaniLink_Backend";

package marketplace_proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Marketplace {
  rpc GetAllProducts (google.protobuf.Empty) returns (AllProductDetails);
  rpc GetProductById (IdReq) returns (ProductDetail);
  rpc GetProductByCommodityId (IdReq) returns (AllProductDetails);
  rpc GetProductByAreaId (IdReq) returns (AllProductDetails);
  rpc GetProductBySellerId (IdReq) returns (AllProductDetails);
  rpc GetProductByPriceRange (PriceRange) returns (AllProductDetails);
  rpc SearchProduct(Query) returns (AllProductDetails);
  rpc GetUserShoppingCarts (google.protobuf.Empty) returns (AllShoppingCartDetail);
  rpc GetUserOrders (google.protobuf.Empty) returns (AllOrderDetail);
  rpc AddProductToShoppingCart (IdReq) returns (AllShoppingCartDetail);
  rpc DecreaseProductInShoppingCart (IdReq) returns (AllShoppingCartDetail);
  rpc RemoveProductFromShoppingCart (IdReq) returns (AllShoppingCartDetail);
  rpc Checkout (CheckoutReq) returns (OrderDetail);
  rpc PlaceOrder (PlaceOrderReq) returns (OrderDetail);
  rpc CancelOrder (IdReq) returns (OrderDetail);
  rpc ConfirmOrder (IdReq) returns (OrderDetail);
  rpc GetOrderById (IdReq) returns (OrderDetail);

}

enum InvoiceStatus {
	PAID = 0;
	UNPAID = 1;
}

enum OrderStatus{
	ACCEPTED = 0;
	PROCESSING = 1;
	DELIVERING = 2;
	DELIVERED = 3;
	FINISHED = 4;
	CANCELLED = 5;
	CHECKOUT = 6;
	NEEDPAYMENT = 7;
}

message PlaceOrderReq {
	string OrderId = 1;
	string AddressId = 2;
	string Notes = 3;
}

message CheckoutReq {
	repeated string ShoppingCartId = 1;
}

message IdReq {
	string Id = 1;
}

message AllProductDetails {
	repeated ProductDetail Products = 1;
}

message ProductDetail {
	string Id = 1;
	string Name = 2;
	string Description = 3;
	string Price = 4;
	int32 AvailableStock = 5;
	int32 Sold = 6;
	string CommodityId = 7;
	string AreaId = 8;
	string SellerId = 9;
	repeated string Image = 10;
	google.protobuf.Timestamp CreatedAt = 11;
	google.protobuf.Timestamp UpdatedAt = 12;
	google.protobuf.Timestamp DeletedAt = 13;
}

message PriceRange {
	string minValue = 1;
	string maxValue = 2;
}
message Query {
	string Query = 1;
}

message AllShoppingCartDetail {
	repeated ShoppingCartDetail ShoppingCarts = 1;
}

message ShoppingCartDetail {
	string Id = 1;
	int32 Amount = 2;
	int64 FinalPrice = 3;
	ProductDetail Product = 4;
	google.protobuf.Timestamp CreatedAt = 5;
	google.protobuf.Timestamp UpdatedAt = 6;
	google.protobuf.Timestamp DeletedAt = 7;
}

message AllOrderDetail {
	repeated OrderDetail Orders = 1;
}

message OrderDetail {
	string Id = 1;
	string Notes = 2;
	int64 TotalPrice = 3;
	string Address = 4;
	OrderStatus Status = 6;
	repeated ShoppingCartDetail ShoppingCarts = 7;
	google.protobuf.Timestamp CreatedAt = 8;
	google.protobuf.Timestamp UpdatedAt = 9;
	google.protobuf.Timestamp DeletedAt = 10;
}


